[WEATHER] Fix issue with overlapping symbol

--- a/modules/weather/main.css
+++ b/modules/weather/main.css
@@ -10,6 +10,7 @@
     top: 40px; left: 40px;
     background-size: 120% auto;
     background-position: center;
+    z-index: 200;
 }
 
 .hub_module[data-module='Weather'] .temp {
